Import of KTHAKORE/SDLx-TTF-0.003 from CPAN.
gitpan-cpan-distribution: SDLx-TTF
gitpan-cpan-version:      0.003
gitpan-cpan-path:         KTHAKORE/SDLx-TTF-0.003.tar.gz
gitpan-cpan-author:       KTHAKORE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -8,6 +8,7 @@ build_requires:
   SDL: 2.404
 configure_requires:
   Alien::SDL: 1.3
+  ExtUtils::CBuilder: 0
   Module::Build: 0.36
   SDL: 2.404
 generated_by: 'Module::Build version 0.3603'
@@ -19,10 +20,10 @@ name: SDLx-TTF
 provides:
   SDLx::TTF:
     file: lib/SDLx/TTF.pm
-    version: 0.002
+    version: 0.003
 requires:
   Alien::SDL: 1.3
   SDL: 2.404
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.002
+version: 0.003
